Bug 149240 - Fix 32-bit build issues in WebAssembly
Summary: Fix 32-bit build issues in WebAssembly
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 146064
  Show dependency treegraph
 
Reported: 2015-09-16 17:11 PDT by Sukolsak Sakshuwong
Modified: 2015-09-16 18:16 PDT (History)
1 user (show)

See Also:


Attachments
Patch (5.19 KB, patch)
2015-09-16 17:15 PDT, Sukolsak Sakshuwong
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Sukolsak Sakshuwong 2015-09-16 17:11:52 PDT
Fix 32-bit build issues in WebAssembly
Comment 1 Sukolsak Sakshuwong 2015-09-16 17:15:58 PDT
Created attachment 261340 [details]
Patch
Comment 2 Geoffrey Garen 2015-09-16 17:26:55 PDT
Comment on attachment 261340 [details]
Patch

r=me
Comment 3 WebKit Commit Bot 2015-09-16 18:16:40 PDT
Comment on attachment 261340 [details]
Patch

Clearing flags on attachment: 261340

Committed r189891: <http://trac.webkit.org/changeset/189891>
Comment 4 WebKit Commit Bot 2015-09-16 18:16:44 PDT
All reviewed patches have been landed.  Closing bug.