Fix 32-bit build issues in WebAssembly https://bugs.webkit.org/show_bug.cgi?id=149240

Patch by Sukolsak Sakshuwong <sukolsak@gmail.com> on 2015-09-16
Reviewed by Geoffrey Garen.

Fix the syntax error and replace the instructions that are not available on
64-bit platforms.

* wasm/WASMFunctionCompiler.h:
(JSC::WASMFunctionCompiler::startFunction):
(JSC::WASMFunctionCompiler::endFunction):
(JSC::WASMFunctionCompiler::buildReturn):
(JSC::WASMFunctionCompiler::callAndUnboxResult):
(JSC::WASMFunctionCompiler::loadValueAndConvertToDouble):

Canonical link: https://commits.webkit.org/167343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189891 268f45cc-cd09-0410-ab3c-d52691b4dbfc